kill a bunch of row seps

--- a/finite.tex
+++ b/finite.tex
@@ -186,7 +186,7 @@ An even-periodic ring spectrum \(E\) satisfies \index{commutativity hypothesis@c
 \begin{definition}[\textbf Flatness \textbf Hypothesis]
 An even-periodic ring spectrum \(E\) satisfies \index{flatness hypothesis@flatness hypothesis, \FH}{\FH} when the right-unit map \(E_0 \to E_0 E\) is flat.  In this case, the Segal map \[(E_0 E)^{\otimes_{E_0} j} \otimes_{E_0} E_0 X \to \pi_0(E^{\sm (j+1)} \sm X) = \pi_0 \mathcal D_E(X)[j]\] is an isomorphism for all \(X\).  In geometric language, this says that \(\context{E}\) is valued in simplicial sets equivalent to nerves of groupoids and that \[\context{E}(X) := \widetilde{\pi_0 \mathcal D_E(X)}\] forms a Cartesian quasicoherent sheaf over \(\context{E}\).  In this sense, we have constructed a factorization
 \begin{center}
-\begin{tikzcd}[row sep=1.2em]
+\begin{tikzcd}
 \CatOf{Spectra} \arrow["E_0(-)"]{rr} \arrow["\context{E}(-)"']{rd} & & \CatOf{Modules}_{E_0} \\
 & \CatOf{QCoh}(\context{E}) \arrow["{(-)[0]}"']{ru} .
 \end{tikzcd}
@@ -266,7 +266,7 @@ If \(E\) is a complex-oriented ring spectrum, then the simplicial sheaf \(\conte
 \begin{remark}[{\cite[Section 5]{BousfieldLocalization}, cf.\ also \cite[Theorem 1.2.4.1]{LurieHA}, \cite[Section 1]{MillerRelations}}]
 It is also possible to construct an \(E\)--Adams spectral sequence by iteratively smashing with the fiber sequence \(\overline E \to \S \to E\) to form the tower
 \begin{center}
-\begin{tikzcd}[row sep=1em]
+\begin{tikzcd}
 \S \sm X \arrow{d} & \overline E \sm X \arrow{l} \arrow{d} & \overline E^{\sm 2} \sm X \arrow{l} \arrow{d} & \cdots \arrow{l} \\
 E \sm X & E \sm \overline E \sm X & E \sm \overline E^{\sm 2} \sm X & \cdots.
 \end{tikzcd}
@@ -766,7 +766,7 @@ where \(i\) is an inclusion of \(k\) into the residue field \(R/\m\) and \(\alph
 \begin{remark}[{cf.\ \cite[Section 4.1]{RezkNotesOnHMThm}}]\label{LubinTateStackInFGLTerms}
 Because the ground field \(k\) is a local ring, the formal group \(\Gamma\co \Spec k \to \moduli{fg}\) at the special fiber always has trivializable Lie algebra, hence \Cref{CoordinatizbleFGs} shows that it always admits a presentation by a formal group law.  In fact, any deformation \(\G\co \Spf R \to \moduli{fg}\) of \(\Gamma\) also has a trivializable Lie algebra, since projective modules (such as \(T_0 \G\)) over local rings like \(R\) are automatically free (i.e., trivializable).  It follows that the groupoid \((\moduli{fg})^\wedge_\Gamma(R)\) admits a presentation in terms of formal group \emph{laws}.  Starting with the pullback square of groupoids
 \begin{center}
-\begin{tikzcd}[row sep=1.5em]
+\begin{tikzcd}
 (\moduli{fg})^\wedge_\Gamma(R) \arrow{d} \arrow{rr} \arrow[drr, phantom, "\lrcorner", very near start] & & \moduli{fg}(R) \arrow{d} \\
 \displaystyle\coprod_{i\co \Spec R/\m \to \Spec k} \{\Gamma\} \arrow{r} & \displaystyle\coprod_{i\co \Spec R/\m \to \Spec k} \moduli{fg}(k) \arrow{r} & \moduli{fg}(R/\m)
 \end{tikzcd}
@@ -929,7 +929,7 @@ Let \(\sheaf F\) be a \index{sheaf!quasicoherent}quasicoherent sheaf over \(\mod
 \begin{proof}
 Following the discussion in the introduction, note that a cofiber sequence \[X' \to X \to X''\] of spectra gives rise to an exact sequence
 \begin{center}
-\begin{tikzcd}[row sep=1em]
+\begin{tikzcd}
 \cdots \arrow{r} & \context{\MUP}(X') \arrow{r} & \context{\MUP}(X) \arrow{r} & \context{\MUP}(X'') \arrow{r} & \cdots \\
 \cdots \arrow{r} & \sheaf N' \arrow[equal]{u} \arrow{r} & \sheaf N \arrow[equal]{u} \arrow{r} & \sheaf N'' \arrow[equal]{u} \arrow{r} & \cdots.
 \end{tikzcd}
@@ -1362,7 +1362,7 @@ so that we would arrive at a contradiction if the equation \(2a = 1\) were insol
 \begin{example}[{\cite[Example 7.17 and Corollary 5.12]{Rezk512Notes}}]
 Take \(k\) to be a perfect field of positive characteristic \(p\), and take \(\Gamma\) over \(\Spec k\) to be a finite height formal group with associated Morava \(E\)--theory \(E_\Gamma\).  By smashing the unit map \(\S \to E_\Gamma\) with the mod--\(p\) Moore spectrum, we get an induced map of homotopy groups \[h_{2n}\co \pi_{2n} M_0(p) \to \pi_{2n} E_\Gamma/p.\]  We concluded as a consequence of \Cref{IdIsAnInvariantIdeal} that there is an invariant section \(v_1\) of \(\omega^{\otimes(p-1)}\) on \(\moduli{fg}^{\ge 1}\), and hence a preferred element of \(\pi_{2(p-1)} E_\Gamma / p\) which is natural in the choice of \(\Gamma\).  One might hope that these elements are the image of an element in \(\pi_{2(p-1)} M_0(p)\) under the Hurewicz map \(h\), and this turns out to be true: there is such an element, called \(\alpha_{1/1}\).  This element furthermore turns out to be \(p\)--torsion, meaning it extends to a map
 \begin{center}
-\begin{tikzcd}[row sep=1.2em]
+\begin{tikzcd}
 \S^{2(p-1)} \arrow["p"]{r} \arrow["0"']{rd} & \S^{2(p-1)} \arrow["\alpha_{1/1}"]{d} \arrow["\cofib"]{r} & M_{2(p-1)}(p) \arrow[densely dotted, "v"]{ld} \\
 & M_0(p).
 \end{tikzcd}
@@ -1371,7 +1371,7 @@ At odd primes, this turns out to be the \(v_1\)--self-map \(v\co M_{2(p-1)}(p) \
 
 This admits many generalizations.  First, different powers \(v_1^j\) of the section \(v_1\) also give rise to homotopy elements \(\alpha_{j/1} \in \pi_{2(p-1)j} M_0(p)\) (though their Hurewicz images no longer uniquely specify them).  These elements also appear in other Moore spectra \(M_0(p^m)\), where they have varying orders of divisibility, and we write \(\alpha_{j/k}\) for a homotopy element satisfying \(p^{k-1} \alpha_{j/k} = \alpha_{j/1}\).\footnote{The incarnation of these elements in \(\G_m\)--local homotopy are exactly the elements witnessed by the invariant function \(u^{2(p-1)j}\) in \Cref{piLK1SExample}.}  Additionally, each Moore spectrum supports an Adams \(v_1\)--self--map of the form \[v(p^j) \co M_{|v_1| p^{j-1}}(p^j) \to M_0(p^j),\] which collectively form commutative diagrams of the shape
 \begin{center}
-\begin{tikzcd}[row sep=1.2em]
+\begin{tikzcd}
 M_{p \cdot |v_1| p^{j-1}}(p^j) \arrow["v(p^j)^p"]{r} \arrow{d} & M_0(p^j) \arrow{d} \\
 M_{|v_1|p^j}(p^{j+1}) \arrow["v(p^{j+1})"]{r} & M_0(p^{j+1}).
 \end{tikzcd}
