--- a/mo.tex
+++ b/mo.tex
@@ -754,7 +754,7 @@ We now seek to understand the utility of the scheme \(\Spec \HFtwo P_0(MO)\), as
 \begin{lemma}\label{DetectingMORingMapsInHomotopy}
 The following square commutes:
 \begin{center}
-\begin{tikzcd}[row sep=1em]
+\begin{tikzcd}
 \CatOf{Modules}_{\F_2}(\HFtwo P_0(MO), \F_2) & \CatOf{Spectra}(MO, \HFtwo P) \arrow[equal]{l} \\
 \CatOf{Algebras}_{\F_2/}(\HFtwo P_0(MO), \F_2) \arrow[hookrightarrow]{u} & \CatOf{RingSpectra}(MO, \HFtwo P) \arrow[equal]{l} \arrow[hookrightarrow]{u}.
 \end{tikzcd}
@@ -767,7 +767,7 @@ The top isomorphism asserts that \(\F_2\)--cohomology and \(\F_2\)--homology are
 \begin{corollary}\label{MOOrientationsVsRPClasses}
 There is a bijection between homotopy classes of ring maps \(MO \to \HFtwo P\) and homotopy classes of factorizations\index{orientation!Adams's condition}
 \begin{center}
-\begin{tikzcd}[row sep=1em]
+\begin{tikzcd}
 \S^0 \arrow{r} \arrow{rd} & MO(1) \arrow[densely dotted]{d} \\
 & \HFtwo P.
 \end{tikzcd}
