--- a/unknowns.tex
+++ b/unknowns.tex
@@ -91,7 +91,7 @@ This procedure of passing to (higher-order) vector bundles, as in the Kreck--Sto
 
 As an example of a blueshifting construction, an important observation of Ando, Morava, and Sadofsky~\cite{AMS} is that the \(C_p\)--Tate construction on the ring spectrum \(E(d)\) is a variant of \(E(d-1)\).\footnote{Somewhat more specifically, it gives \(E(d-1)\) with homotopy tensored up by a quite \emph{large} ring.}  In fact, Hovey, Sadofsky, and Kuhn show that something similar happens quite generally: if \(R\) is an \(E(d)\)--local ring spectrum and \(G\) is a finite \(p\)--group, then the Tate object \(R^{tG}\) is an \(E(d-1)\)--local ring spectrum.  For a striking example of this phenomenon, we consider the case of the \(2\)--adic sphere spectrum, which is \(K(\infty)\)--local.  We specialize to the case \(G = C_2\) in order to perform an explicit analysis of \(\S^{tC_2}\), which belongs to a stable fiber sequence \[\S^{hC_2} \to \S^{tC_2} \to \Susp \S_{hC_2}.\]  The orbit spectrum can be identified as \[\S_{hC_2} \simeq \Susp^\infty_+ EC_2 / C_2 = \Susp^\infty_+ BC_2 \simeq \Susp^\infty_+ \RP^\infty,\] and similarly we can identify the fixed point spectrum as \[\S^{hC_2} \simeq F_{C_2}(\Susp^\infty_+ EC_2, \S) \simeq D\Susp^\infty_+ \RP^\infty.\]  A remarkable theorem of Atiyah~\cite{Atiyah} presents the Spanier--Whitehead dual of projective space.  First, the calculation \(T(\mathcal L \downarrow \RP^n) = \RP^{n+1}\) of \Cref{RPnThomExample} extends by the formula \(T(m \mathcal L \downarrow \RP^n) = \Susp^\infty_+ \RP^{n+m} / \RP^{m-1}\) to positive values of \(m\), and the same formula can be used to \emph{define} complexes \(\RP^n_m\) for negative values of \(m\).  Then, Atiyah demonstrates the formula \[D \RP^{n-1}_m \simeq \Susp \RP^{m-1}_n.\]  In our case, we thus calculate
 \begin{center}
-\begin{tikzcd}[row sep=1.2em]
+\begin{tikzcd}
 \S^{hC_2} \arrow{r} \arrow[equal]{d} & \S^{tC_2} \arrow{r} \arrow[equal]{d} & \Susp \S_{hC_2} \arrow[equal]{d} \\
 \Susp \RP^{-1}_{-\infty} \arrow{r} & \Susp \RP^\infty_{-\infty} \arrow{r} & \Susp \RP^\infty.
 \end{tikzcd}
@@ -206,7 +206,7 @@ This is somewhat analogous to Whitehead's theorem in homotopy theory: the Picard
 
 The idea is that these kinds of observations can be used to bundle the behavior of the homotopy of the \(\Gamma_d\)--local sphere into a digestable format.  The computation of the homotopy of the \(\Gamma_2\)--local sphere has been fully executed by Shimomura and collaborators~\cite{Shimomura,ShimomuraYabeM20,ShimomuraYabeL2S,BehrensRevisited}, but it is \emph{exceedingly} complicated.  The role of continuity properties is to reduce the seemingly erratic behavior of arbitrary functions down to a specification on a dense set.  Further properties---analyticity, say, or more seriously a direct relationship to \(p\)--adic analytic number theory---could reduce the statement to something genuinely tractible.  This idea is meant to be analogous to the relative ease of studying number theoretic \(L\)--functions over trying to understand them through painstaking computation of their special values.  Such a program was initiated by Hopkins~\cite{StricklandpAdicInterpolation}, from which a partial collection of results have emerged.\footnote{Behrens has also pursued a program encoding this problem in terms of modular forms~\cite{BehrensCongruences,BehrensModularDescription,BehrensBuildings}.}  Most strikingly, Mitchell \cite{MitchellIwasawa,HahnMitchell} has fully elucidated this program in the \(\G_m\)--local category, Hovey and Strickland have shown a restricted continuity result in the general setting~\cite[Section 14]{HoveyStrickland}\footnote{Also interesting are some negative results, such as: the number of Picard-places where the homotopy of \(\widehat L_2 M(p)\) has infinite order has positive Haar measure~\cite[Section 15.2]{HoveyStrickland}.}, and the original work of Hopkins, Mahowald, and Sadofsky~\cite{HMS} shows that the following pair of squares are both pullbacks:
 \begin{center}
-\begin{tikzcd}[row sep=1.2em]
+\begin{tikzcd}
 \CatOf{Spectra}_{\Gamma_d} \arrow{r} \arrow[bend left=12]{rr} & \CatOf{QCoh}((\moduli{fg})^\wedge_{\Gamma_d}) \arrow[densely dotted]{r} & \CatOf{QCoh}(k) \\
 \operatorname{Pic}(\CatOf{Spectra}_{\Gamma_d}) \arrow{r} \arrow{u} & \operatorname{Pic}(\CatOf{QCoh}((\moduli{fg})^\wedge_{\Gamma_d})) \arrow{r} \arrow{u} & \operatorname{Pic}(\CatOf{QCoh}(k)) \arrow{u},
 \end{tikzcd}
