--- a/quillen.tex
+++ b/quillen.tex
@@ -768,21 +768,21 @@ The assignment \(X \mapsto \pi_0 (E^{(\Susp^\infty_+ X)^{\sm p}})^{tC_p}\) is a 
 \begin{proof}
 The Eilenberg--Steenrod axioms are clear except for the cofiber sequence axiom, which we will boil down to checking that the assignment \(X \mapsto (X^{\sm p})^{tC_p}\) preserves cofiber sequences of finite complexes.  A cofiber sequence \[X \to Y \to Y/X\] of pointed spaces is equivalent data to the diagram \[X \to Y,\] which has colimit \(Y\) and which admits a filtration by distance from the initial node with filtration quotients:
 \begin{center}
-\begin{tikzcd}[row sep=1em]
+\begin{tikzcd}
 X \arrow{r} & Y \\
 X \arrow[equal]{u} & Y/X \arrow[leftarrow]{u}.
 \end{tikzcd}
 \end{center}
 By taking the \(p\)--fold Cartesian power of the diagram \(X \to Y\), we produce a diagram shaped like an \(p\)--dimensional hypercube with colimit \(Y^{\sm p}\) and which again admits a filtration by distance from the initial node.  The colimits of these partial diagrams give a \(C_p\)--equivariant filtration of \(Y^{\sm p}\) as:
 \begin{center}
-\begin{tikzcd}[column sep=1em, row sep=1em]
+\begin{tikzcd}[column sep=1em]
 F_0 \arrow{r} & F_1 \arrow{r} & \cdots \arrow{r} & F_{p-1} \arrow{r} & Y^{\sm p} \\
 X^{\sm p} \arrow[equal]{u} & \bigvee \left(X^{\sm (p-1)} \sm (Y/X)\right) \arrow[leftarrow]{u} & \cdots & \bigvee \left(X \sm (Y/X)^{\sm (p-1)}\right) \arrow[leftarrow]{u} & (Y/X)^{\sm p} \arrow[leftarrow]{u}.
 \end{tikzcd}
 \end{center}
 We now apply \((-)^{tC_p}\) to this diagram.  The Tate construction carries cofiber sequences of \(C_p\)--spectra to cofiber sequences of spectra, so this is again a filtration diagram.  In the intermediate filtration quotients, the \(C_p\)--action is given by freely permuting wedge factors, from which it follows that the Tate construction vanishes on these nodes.  Hence, the diagram postcomposed with the Tate construction takes the form
 \begin{center}
-\begin{tikzcd}[row sep=1em]
+\begin{tikzcd}
 F_0^{tC_p} \arrow[equiv]{r} & F_1^{tC_p} \arrow[equiv]{r} & \cdots \arrow[equiv]{r} & F_{p-1}^{tC_p} \arrow{r} & (Y^{\sm p})^{tC_p} \\
 (X^{\sm p})^{tC_p} \arrow[equal]{u} & * \arrow[leftarrow]{u} & \cdots & * \arrow[leftarrow]{u} & ((Y/X)^{\sm p})^{tC_p}. \arrow[leftarrow]{u}
 \end{tikzcd}
