add "closed" to intro

--- a/intro.tex
+++ b/intro.tex
@@ -30,8 +30,8 @@ neither of which is very interesting, since they are both zero in positive degre
 
 However, having maps of homology theories (or, really, of spectra) is considerably more data than just the genus.  For instance, we can use such a map to extract a theory of integration by considering the following special case of oriented bordism, where we evaluate \(M\SO_*\) on an infinite loopspace:
 \begin{align*}
-M\SO_n K(\Z, n) & = \left\{ \text{oriented \(n\)--manifolds mapping to \(K(\Z, n)\)} \right\} / \sim \\
-& = \left. \left\{ \begin{array}{c}\text{oriented \(n\)--manifolds \(Z\)} \\ \text{with a specified class \(\omega \in H^n(Z; \Z)\)} \end{array}\right\} \middle/ \sim \right. .
+M\SO_n K(\Z, n) & = \left. \left\{ \begin{array}{c} \text{closed oriented \(n\)--manifolds} \\ \text{mapping to \(K(\Z, n)\)} \end{array} \right\} \middle/ \sim \right. \\
+& = \left. \left\{ \begin{array}{c}\text{closed oriented \(n\)--manifolds \(Z\)} \\ \text{with a specified class \(\omega \in H^n(Z; \Z)\)} \end{array}\right\} \middle/ \sim \right. .
 \end{align*}
 Associated to such a representative \((Z, \omega)\), the yoga of stable homotopy theory then allows us to build a composite
 \begin{align*}
