add footnote: <E(d)> = <vd^-1 BP>

--- a/finite.tex
+++ b/finite.tex
@@ -1212,7 +1212,7 @@ such that \(L_R\) is left-adjoint to \(i\), \(j^*\) is left-adjoint to \(j_*\), 
 
 The idea, then, is that \(\CatOf{Spectra}_R\) plays the topological role of the derived category of those sheaves supported on the image of the map \(j\).  In \Cref{DefnChromaticHomologyThys}, we identified several classes of interesting such maps \(j\) tied to the geometry of \(\moduli{fg}\).  We record these special cases now:
 \begin{definition}
-In the case \(R = E_\Gamma\) of continuous Morava \(E\)--theory, this is a model of the inclusion of the deformation space around the point \(\Gamma\), and we will denote the associated localizer by \(L_\Gamma\).  In the special case that \(\Gamma = \Gamma_d\) is taken to be the \index{formal group!Honda group}Honda formal group, we further abbreviate the localizer by \[\CatOf{Spectra} \xrightarrow{\widehat L_d} \CatOf{Spectra}_{\Gamma_d}.\]  In the case when \(R = E(d)\) models the inclusion of the open complement of the unique closed substack of codimension \(d\), we will denote the localizer by \[\CatOf{Spectra} \xrightarrow{L_d} \CatOf{Spectra}_d = \CatOf{Spectra}_{\moduli{fg}^{\le d}}.\]
+In the case \(R = E_\Gamma\) of continuous Morava \(E\)--theory, this is a model of the inclusion of the deformation space around the point \(\Gamma\), and we will denote the associated localizer by \(L_\Gamma\).  In the special case that \(\Gamma = \Gamma_d\) is taken to be the \index{formal group!Honda group}Honda formal group, we further abbreviate the localizer by \[\CatOf{Spectra} \xrightarrow{\widehat L_d} \CatOf{Spectra}_{\Gamma_d}.\]  In the case when \(R = E(d)\) models the inclusion of the open complement of the unique closed substack of codimension \(d\),\footnote{In light of \Cref{OpenSubstacksOfMfg}, we may also take \(R = v_d^{-1} BP\), which gives an equivalent localization.} we will denote the localizer by \[\CatOf{Spectra} \xrightarrow{L_d} \CatOf{Spectra}_d = \CatOf{Spectra}_{\moduli{fg}^{\le d}}.\]
 \end{definition}
 
 These localizers have a number of nice properties linking them to algebraic models.
