improve Figure 5.4's caption

--- a/sigma.tex
+++ b/sigma.tex
@@ -1569,7 +1569,7 @@ This, finally, makes explicit use of height \(1\) and \(2\) formal group laws.  
 \draw[->, bend right=40] (2-11) to (2-14);
 \end{tikzpicture}
 \end{center}
-\caption{Application of the three Lemmas in a small range.  Circles denote prohibitions of \(\Sigma^2\)--structures by \Cref{SigmaNonexistenceLemma}, arrows denote \(\Sigma^2\)--structures constructed by \Cref{SigmaArrowLemma}, and squares denote exceptional \(\Sigma^2\)--structures constructed by \Cref{SigmaSpecialCaseLemma}.}
+\caption{Application of the three Lemmas in a small range.  The numbers indicate the degree of the leading homogeneous terms of a putative $\Sigma^2$--structure, the top and bottom rows respectively record the height $d = 1$ and $d = 2$ cases, circles denote prohibitions of \(\Sigma^2\)--structures by \Cref{SigmaNonexistenceLemma}, incoming arrows denote \(\Sigma^2\)--structures constructed by \Cref{SigmaArrowLemma}, and squares denote exceptional \(\Sigma^2\)--structures constructed by \Cref{SigmaSpecialCaseLemma}.}
 \end{figure}
 
 \begin{corollary}\label{LambdasAreFlat}
