fix a buncha dollar signs

--- a/powerops.tex
+++ b/powerops.tex
@@ -51,7 +51,7 @@ An orientation \(MU[6, \infty) \to E_\Gamma\) is \(H_\infty\) if and only if the
 
 \noindent Before addressing this, we discuss in \Cref{CharacterTheorySection} an important phenomenon: after deleting certain forms of torsion, the Morava \(E_\Gamma\)--homology of a finite spectrum can be well--approximated by its Morava \(E_{\Gamma'}\)--homology where \(\Gamma'\) satisfies \(\height{\Gamma'} < \height{\Gamma}\).  This is interesting in its own right, and we will see that the approximation bears directly on the study of power operations.
 
-Secondly, with the homotopy category exposed, we turn to \(E_\infty\)--ring spectra themselves: in \Cref{ConstructionOfTMFSection} we introduce the spectrum \(\TMF\), which is the primary target of the \(\String\)--orientation; and in \Cref{JuvitopTalkSection}, we indicate the construction of an \(E_\infty\) orientation of $\TMF$, providing full details in the simpler case of the construction of the \(\Spin\)--orientation of \(KO\).
+Secondly, with the homotopy category exposed, we turn to \(E_\infty\)--ring spectra themselves: in \Cref{ConstructionOfTMFSection} we introduce the spectrum \(\TMF\), which is the primary target of the \(\String\)--orientation; and in \Cref{JuvitopTalkSection}, we indicate the construction of an \(E_\infty\) orientation of \(\TMF\), providing full details in the simpler case of the construction of the \(\Spin\)--orientation of \(KO\).
 
 
 
@@ -74,7 +74,7 @@ MU[6, \infty)^0(X) \arrow["\phi"]{r} \arrow["P^{\Sigma_n}_{MU[6, \infty)}(X)"]{d
 MU[6, \infty)^0(B\Sigma_n \times X) \arrow["P^{\Sigma_n}(\phi)"]{r} & E^0(B\Sigma_n \times X).
 \end{tikzcd}
 \end{center}
-Before understanding the maps in this commutative diagram, we must understand its nodes.  There is a natural map \[E^0(B\Sigma_n) \otimes_{E^0} E^0(X) \to E^0(B\Sigma_n \times X),\] and whether it is an equivalence is highly dependent on the structure of \(E^0(B\Sigma_n)\) itself---for instance, this would be the case if \(E^0(B\Sigma_n)\) were flat as an \(E^0\)--module.  For this reason, we are strongly motivated to feel out any foothold on this object that we are able to find, and a critical such foothold is the chromatic character theory of Hopkins, Kuhn, and Ravenel~\cite{HKR}.  Their theorems describe the Morava \(E\)--cohomology of a finite group with certain forms of torsion (e.g., \(p\)--torsion) deleted, and we give an introduction to their results in this Lecture.\footnote{The intrepid reader who finds this material interesting should also look at: the paper by Morava~\cite{MoravaLocalFieldsExtraordinaryKthy}, which discusses much of the same material here in slightly different terms; the paper by Greenlees--Strickland~\cite{GreenleesStrickland}, which discuss a ``transchromatic'' version of these results, where they study the object $i_d^* j_d{}_* (\moduli{fg})^\wedge_\Gamma$ of \Cref{LEFTRealTheoremWithProof}; and the paper by Stapleton~\cite{Stapleton}, which streamlines and generalizes the results of Greenlees--Strickland by invoking the geometry of $p$--divisible groups.}
+Before understanding the maps in this commutative diagram, we must understand its nodes.  There is a natural map \[E^0(B\Sigma_n) \otimes_{E^0} E^0(X) \to E^0(B\Sigma_n \times X),\] and whether it is an equivalence is highly dependent on the structure of \(E^0(B\Sigma_n)\) itself---for instance, this would be the case if \(E^0(B\Sigma_n)\) were flat as an \(E^0\)--module.  For this reason, we are strongly motivated to feel out any foothold on this object that we are able to find, and a critical such foothold is the chromatic character theory of Hopkins, Kuhn, and Ravenel~\cite{HKR}.  Their theorems describe the Morava \(E\)--cohomology of a finite group with certain forms of torsion (e.g., \(p\)--torsion) deleted, and we give an introduction to their results in this Lecture.\footnote{The intrepid reader who finds this material interesting should also look at: the paper by Morava~\cite{MoravaLocalFieldsExtraordinaryKthy}, which discusses much of the same material here in slightly different terms; the paper by Greenlees--Strickland~\cite{GreenleesStrickland}, which discuss a ``transchromatic'' version of these results, where they study the object \(i_d^* j_d{}_* (\moduli{fg})^\wedge_\Gamma\) of \Cref{LEFTRealTheoremWithProof}; and the paper by Stapleton~\cite{Stapleton}, which streamlines and generalizes the results of Greenlees--Strickland by invoking the geometry of \(p\)--divisible groups.}
 
 
 
@@ -189,7 +189,7 @@ The \index{context!abelian Einfty@abelian \(E_\infty\)}\textit{abelian \(E_\inft
 There is an isomorphism \[\Spf E^0 B\Sigma_j / I_{\Tr} \cong \Sub_j \CP^\infty_E,\] where \(\Sub_j\) denotes the subscheme of \(\Div_j^+\) consisting of those effective Weil divisors of rank \(j\) which are \index{divisor!subgroup}subgroup divisors.\footnote{If \(j\) is not a power of \(p\), this is the terminal scheme.}
 \end{theorem}
 \begin{proof}[Proof sketch, after Stapleton]
-The proof of this Theorem requires a very involved algebraic calculation (which can take different forms~\cite{StricklandFiniteSubgps,SchlankStapleton}), so we describe only the reduction to that calculation.  The object \(E^0 B\Sigma_j\) is accessible via the chromatic character theory from the previous Lecture, where we presented \(C_0 \otimes E^0 B\Sigma_j\) as a certain ring of \(C_0\)--valued class functions on the symmetric group.  The effect of quotienting by the transfer ideal is to delete all of the factors belonging to conjugacy classes that are not transitive.  On the other side of the putative isomorphism, the formation of the scheme of subgroups commutes with base change, and hence we have \[\Spec C_0 \times \Sub_j \CP^\infty_E \cong \Sub_j (\Spec C_0 \times \CP^\infty_E) \cong \Sub_j \Lambda^*,\] where in the second isomorphism we have used the canonical isomorphism carried by the ring $C_0$.  After this character-theoretic base-change, there is a canonical bijection between the two sides: a map \[\Z_p^n \xrightarrow{\mathrm{transitive}} \Sigma_n\] has an image factorization \(\Z_p^n \to A \to \Sigma_n\), and the Pontryagin dual of the surjective map in the factorization gives an injective map \[\Lambda^* \leftarrow A^*.\]
+The proof of this Theorem requires a very involved algebraic calculation (which can take different forms~\cite{StricklandFiniteSubgps,SchlankStapleton}), so we describe only the reduction to that calculation.  The object \(E^0 B\Sigma_j\) is accessible via the chromatic character theory from the previous Lecture, where we presented \(C_0 \otimes E^0 B\Sigma_j\) as a certain ring of \(C_0\)--valued class functions on the symmetric group.  The effect of quotienting by the transfer ideal is to delete all of the factors belonging to conjugacy classes that are not transitive.  On the other side of the putative isomorphism, the formation of the scheme of subgroups commutes with base change, and hence we have \[\Spec C_0 \times \Sub_j \CP^\infty_E \cong \Sub_j (\Spec C_0 \times \CP^\infty_E) \cong \Sub_j \Lambda^*,\] where in the second isomorphism we have used the canonical isomorphism carried by the ring \(C_0\).  After this character-theoretic base-change, there is a canonical bijection between the two sides: a map \[\Z_p^n \xrightarrow{\mathrm{transitive}} \Sigma_n\] has an image factorization \(\Z_p^n \to A \to \Sigma_n\), and the Pontryagin dual of the surjective map in the factorization gives an injective map \[\Lambda^* \leftarrow A^*.\]
 
 As described above, the permutation representation gives a natural map \(B\Sigma_j \to BU(j)\), which participates in the following square:
 \begin{center}
@@ -198,7 +198,7 @@ E^0 BU(j) \arrow{r} \arrow["\simeq", leftarrow]{d} & E^0 B\Sigma_j / I_{\Tr} \ar
 \sheaf O(\Div_j^+ \CP^\infty_E) \arrow["\mathrm{surj.}"]{r} & \sheaf O(\Sub_j \CP^\infty_E) \arrow["\mathrm{inj.}"]{r} \arrow[densely dotted]{u} & \sheaf O(\Sub_j \Lambda^*).
 \end{tikzcd}
 \end{center}
-The left-hand isomorphism is stated in \Cref{IdentificationOfBUnWithDivn}; the right-hand isomorphism is the content of the previous paragraph; the bottom-left horizontal map is surjective because subgroup divisors form a closed subscheme of all divisors; the top horizontal map is an injection by a difficult theorem of Strickland~\cite[Theorems 8.5--6]{StricklandEthyOfBSigma}; and the bottom horizontal map is an injection by a second difficult theorem of Strickland~\cite[Theorem 10.1]{StricklandFiniteSubgps}.  In fact, the two difficult theorems say more: they show that the two terms are finite and free of equal rank.  Altogether, these can be used to define the middle vertical map: any element in the bottom can be preimaged along the surjection, translated along the isomorphism, and pushed back down along the map induced by the regular representation.  One quickly checks that this gives a well-defined injective $E^0$--algebra homomorphism.
+The left-hand isomorphism is stated in \Cref{IdentificationOfBUnWithDivn}; the right-hand isomorphism is the content of the previous paragraph; the bottom-left horizontal map is surjective because subgroup divisors form a closed subscheme of all divisors; the top horizontal map is an injection by a difficult theorem of Strickland~\cite[Theorems 8.5--6]{StricklandEthyOfBSigma}; and the bottom horizontal map is an injection by a second difficult theorem of Strickland~\cite[Theorem 10.1]{StricklandFiniteSubgps}.  In fact, the two difficult theorems say more: they show that the two terms are finite and free of equal rank.  Altogether, these can be used to define the middle vertical map: any element in the bottom can be preimaged along the surjection, translated along the isomorphism, and pushed back down along the map induced by the regular representation.  One quickly checks that this gives a well-defined injective \(E^0\)--algebra homomorphism.
 
 What remains to show, then, is that this last injection is an isomorphism, whether by calculating the relevant determinant~\cite[Section 7.9]{SchlankStapleton} or by explicitly analyzing a generating element in terms of Euler classes~\cite[Theorem 9.2]{StricklandEthyOfBSigma}.
 \end{proof}
@@ -217,7 +217,7 @@ where \index{level structure}\(\Level(A^*, \CP^\infty_E)\) denotes the subscheme
 \end{theorem}
 
 \begin{remark}
-An important piece of intuition about the schemes of level structures \(\Level(A^*, \CP^\infty_E)\) is that they form a kind of replacement for the nonexistent ``scheme of monomorphisms''.  Specifically, the \(p\)--series for a Lubin--Tate universal deformation group is only once \(x\)--divisible, and hence the divisor \(\G[p]\) only contains the divisor \([0]\) with multiplicity one.\footnote{This kind of reasoning applies to domains of characteristic \(0\) generally.}  This excludes noninjective morphisms in this case.  On the other hand, the only subgroups of the formal group restricted to the special fiber are of the form \(p^m \cdot [0]\).  In particular, any level structure on \(\G\) restricts to a morphism with this image divisor at the special fiber, and hence functoriality considerations force us to count these---which are \emph{not} images of monomorphisms---as level structures as well.\footnote{On the other hand, the scheme of level structures tracks \emph{exactly} monomorphisms after tensoring up with the ring $C_0$ of \Cref{CharacterTheorySection}.}
+An important piece of intuition about the schemes of level structures \(\Level(A^*, \CP^\infty_E)\) is that they form a kind of replacement for the nonexistent ``scheme of monomorphisms''.  Specifically, the \(p\)--series for a Lubin--Tate universal deformation group is only once \(x\)--divisible, and hence the divisor \(\G[p]\) only contains the divisor \([0]\) with multiplicity one.\footnote{This kind of reasoning applies to domains of characteristic \(0\) generally.}  This excludes noninjective morphisms in this case.  On the other hand, the only subgroups of the formal group restricted to the special fiber are of the form \(p^m \cdot [0]\).  In particular, any level structure on \(\G\) restricts to a morphism with this image divisor at the special fiber, and hence functoriality considerations force us to count these---which are \emph{not} images of monomorphisms---as level structures as well.\footnote{On the other hand, the scheme of level structures tracks \emph{exactly} monomorphisms after tensoring up with the ring \(C_0\) of \Cref{CharacterTheorySection}.}
 \end{remark}
 
 \begin{remark}[{\cite{StricklandFiniteSubgps}}]
@@ -523,7 +523,7 @@ The introduction of the geometry of \(E_\infty\)--ring spectra has borne out a s
 The goal of this Lecture is to sketch out both the ingredients and the recipe for constructing this object.  We will not prove the main theorem in full detail, as the details are so thick that they do not admit a more reasonable presentation than what Behrens has already given~\cite{BehrensConstruction}.  The idea is to make use of the obstruction theory that \(E_\infty\)--rings garner us, and to ``work locally'' on a particular class of examples where the obstruction theory is well-behaved, using these to carefully exhaust the problem.  We begin with a precise definition of what ``locally'' means in this setting:
 
 \begin{definition}[{\cite[Definition 6.2.2.6, Section 6.5]{LurieHTT}}]
-A \index{sheaf!infty sheaf@\(\infty\)--sheaf}\textit{\(\CatOf{D}\)--valued sheaf} on a site \(\CatOf{C}\) is a functor \(F\co \CatOf C \to \CatOf D\) that converts \v{C}ech diagrams of covers in $\CatOf C$ to homotopy limit diagrams in $\CatOf D$.
+A \index{sheaf!infty sheaf@\(\infty\)--sheaf}\textit{\(\CatOf{D}\)--valued sheaf} on a site \(\CatOf{C}\) is a functor \(F\co \CatOf C \to \CatOf D\) that converts \v{C}ech diagrams of covers in \(\CatOf C\) to homotopy limit diagrams in \(\CatOf D\).
 \end{definition}
 
 \begin{definition}[{\cite[Remark 4.1]{GoerssTMF}}]
@@ -563,7 +563,7 @@ The names supersingular and ordinary are partially explained by the following re
 The supersingular locus of \(\moduli{ell}\) is \(0\)--dimensional.\footnote{In fact, its image in the coarse moduli is the zero-locus of a polynomial, the \(p\){\th} Hasse invariant, which is of degree \((p-1)/2\).  Many of these roots are repeated: there are actually at most \(\lfloor (p-1)/12 \rfloor + 2\) distinct isomorphism classes over \(\overline{\F_p}\).} \qed
 \end{lemma}
 
-\noindent We write \(i\co \moduli{ell}^{\ord} \to (\moduli{ell})^\wedge_p\) for the open inclusion of the ordinary locus.  We then plan to recover a topological enrichment $(\sheaf O_{\top})^\wedge_p$ of $\moduli{ell}$ by constructing the pieces of the following pullback:
+\noindent We write \(i\co \moduli{ell}^{\ord} \to (\moduli{ell})^\wedge_p\) for the open inclusion of the ordinary locus.  We then plan to recover a topological enrichment \((\sheaf O_{\top})^\wedge_p\) of \(\moduli{ell}\) by constructing the pieces of the following pullback:
 \begin{center}
 \begin{tikzcd}
 & (\sheaf O_{\top})^\wedge_p \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & (\sheaf O_{\top})^\wedge_{\moduli{ell}^{\ss}} \arrow{d} & \sheaf O^{\ss} \arrow[equal]{l} \\
@@ -865,7 +865,7 @@ So, we seek a pair of \(E_\infty\)--ring maps into the rationalization and the \
 
 
 
-\subsection{Rational orientations}
+\subsection{Rational orientations of \(KO\)}
 
 We begin with the two rational nodes in the pullback diagram.  As a first approximation to our goal, consider the problem of giving a complex orientation \(MU \to \Q \otimes R\) of a rational ring spectrum \(\Q \otimes R\).  There is an automatic such orientation granted by
 \begin{center}
@@ -903,7 +903,7 @@ This accounts for both of the mapping sets \[\EinftyRings(M\Spin, \Q \otimes KO)
 
 
 
-\subsection{Finite place orientations}\label{FinitePlaceOrientationsSubsection}
+\subsection{Finite place orientations of \(KO\)}\label{FinitePlaceOrientationsSubsection}
 
 We want to understand \(\EinftyRings(M\Spin, KO_p)\) and the map \[\EinftyRings(M\Spin, KO_p) \to \EinftyRings(M\Spin, \Q \otimes KO_p).\]  Here is the initial set-up:
 \begin{center}
@@ -1098,7 +1098,7 @@ so that \(\pi_0 KU \sm KO = \CatOf{Spaces}(\Z_p^\times / C_2, \Z_p)\).  Taking f
 [\Susp^{-1} KO, KO] & = 0, &
 [KO, KO] & \cong \CatOf{Groups}(\CatOf{Spaces}(\Z_p^\times / C_2, \Z_p), \Z_p),
 \end{align*}
-where the isomorphism is given by sending an operation $f\co KO \to KO$ to the K\"ummer sequence $(f(v^k)/v^k)_k \in \pi_0 KO = \Z_p$.  We additionally see that \([KO, KO]\) torsion-free, which accounts for all of our outstanding claims.
+where the isomorphism is given by sending an operation \(f\co KO \to KO\) to the K\"ummer sequence \((f(v^k)/v^k)_k \in \pi_0 KO = \Z_p\).  We additionally see that \([KO, KO]\) is torsion-free, which accounts for all of our outstanding claims.
 
 
 \subsection{Mazur's construction of Kubota--Leopoldt \(p\)--adic \(L\)--functions}
